[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "test"
version = "0.1.0"
[tool.poetry.dependencies]
aiohttp = "^3.6"
bs4 = "^0.0.1"
colorama = "^0.4.3"
discord = "^1.0"
dnspython = "^1.16"
gtts = "^2.1"
pymongo = "^3.10"
python = "^3.7"
selenium = "^3.141"
flask = "^1.1"
[tool.poetry.dev-dependencies]
